@@ -102,6 +102,7 @@ image:doc/images/Diagram_closed_arrow_with_dots.png[closed arrow with dots]
 The existing context menu contributions now only apply to the _Explorer_ view.
 - https://github.com/eclipse-sirius/sirius-components/issues/2128[#2128] [releng] Update generated classes copyright to apply the same format as other classes.
 - https://github.com/eclipse-sirius/sirius-components/issues/2091[#2091] [diagram] Add support for the direct edit in the diagram with nodes.
+- https://github.com/eclipse-sirius/sirius-components/issues/2142[#2142] [diagram] Add support for Edge labels (begin, center, end) in sirius-components-diagrams-reactflow.
 
 == v2023.6.0
 
